src/objects/PremierSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>AccountProcessBuilderActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountValidationsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Validations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AccountWorkflowsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Account Workflows Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseProcessBuilderActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseValidationsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Validations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CaseWorkflowsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Case Workflows Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactProcessBuilderActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactValidationsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Validations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ContactWorkflowsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Contact Workflows Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DisableAutoEmailsDate__c</fullName>
        <label>Disable Auto Emails Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadProcessBuilderActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadValidationsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Validations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LeadWorkflowsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Lead Workflows Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityProcessBuilderActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to disable opportunity processes</description>
        <inlineHelpText>Used to disable opportunity processes</inlineHelpText>
        <label>Opportunity Process Builder Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityValidationsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Used to disable Opportunity Validation Rules.</description>
        <inlineHelpText>Used to disable Opportunity Validation Rules.</inlineHelpText>
        <label>Opportunity Validations Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OpportunityWorkflowsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Used to disable workflows</description>
        <inlineHelpText>Used to disable workflows</inlineHelpText>
        <label>Opportunity Workflows Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SunRunArizonaCCEmail__c</fullName>
        <inlineHelpText>Referenced in workflows etc.</inlineHelpText>
        <label>SunRun Arizona CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SunRunNevadaCCEmail__c</fullName>
        <label>SunRun Nevada CC Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SunRunSouthCarolinaCCEmail__c</fullName>
        <inlineHelpText>Referenced in workflows etc.</inlineHelpText>
        <label>SunRun South Carolina CC Email</label>
        <type>Email</type>
    </fields>
    <label>Premier Settings</label>
</CustomObject>